
2005-08-07 Karl Lehenbauer <karl-bsd@sc.com>

    * Put all commands in a "bsd" namespace
    * Export commands from "bsd" namespace
    * Add interface to setproctitle
    * Use the proper secure idiom, setproctitle("%s", string), to prevent
      stack mangling, etc.
    * Rudimentary manpage bsd.n.