@@ -63,4 +63,5 @@ provided, which can include \fBreadOnly\fR, \fBsynchronous\fR,
 \fBnoClusterRead\fR, \fBnoClusterWrite\fR, \fBexportReadOnly\fR,
 \fBexported\fR, \fBworldExported\fR, \fBanonUidMapping\fR,
 \fBkerberosUidMapping\fR, \fBwebNFS\fR, \fBfilesystemStoredLocally\fR,
-\fBquotasEnabled\fR, \fBrootFilesystem\fR, and \fBuserMounted\fR.
+\fBquotasEnabled\fR, \fBrootFilesystem\fR, \fBuserMounted\fR, \fBmultiLabel\fR,
+and \fBaclsEnabled\fR.
